--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 ﻿fastapi==0.104.1
 uvicorn[standard]==0.24.0
-openai==0.28.1
-python-dotenv==1.0.0
+openai==2.15.0
+httpx==0.25.2
+pillow==10.2.0
+python-multipart==0.0.6
 requests==2.31.0
-orjson==3.9.10
