FEAT: Увеличен размер окна расширения и добавлена возможность растягивания - Увеличен размер окна по умолчанию до 700x850 - Добавлен CSS для растягиваемого интерфейса - Улучшена сетка выбора стилей - Добавлены адаптивные стили - Улучшен UI/UX - Удалены секреты из Git - Добавлен .gitignore для защиты конфиденциальных данных

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -9,7 +9,9 @@
   ],
   "action": {
     "default_popup": "popup.html",
-    "default_title": "Illustraitor AI"
+    "default_title": "Illustraitor AI",
+    "default_width": 700,
+    "default_height": 850
   },
   "icons": {
     "16": "icon16.png",
